tweaks to language on home page

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -10,12 +10,10 @@
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Welcome</h3>
-        <p>Since 2020, we've been gather information shared by farmers around the state on ther cover crop and other
-          soil health practices.
-          You can explore that data via the interactive map and graphs below.
-          For more information on the project please visit the <a href="https://www.michaelfields.org/soil-health"
-            target="_blank" rel="noopener noreferrer">Michael Fields Agricultural Institute
-          </a> website.
+        <p>Since 2020, farmers around Wisconsin have shared cover crop and other soil health practices with us. Each
+          colored dot on the map represents one of their fields. Farmers completed a survey and collected cover crop
+          samples in Fall 2020, 2021, 2022, or 2023.
+
         </p>
 
         <!-- Begin experiment -->
@@ -30,13 +28,11 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title" style="color:#212529;">Map of cover crop practices & results by farm</h5>
+                  <h5 class="card-title" style="color:#212529;">Map of participating citizen science farmers.</h5>
                   <p class="card-text" style="color:#212529;">
-                    Each colored dot on this map represents a field from a participating citizen science farmer.
-                    Farmers completed a survey and collected crop samples in Fall 2020, 2021, 2022, or 2023.
-                    <b>Click</b> each colored dot for a popup box with cover crop types, seeding rate, fertility
-                    management and biomass (how much
-                    plant grew), and more.
+                    Do you see your dot? <b>Click</b> each location for a popup box with cover crop types, seeding rate,
+                    fertility management biomass (how much plant grew), and more.
+
                   </p>
 
                 </div>
@@ -94,8 +90,12 @@
           src="{% static 'img/qrcode_for_further.png' %}" />
         <hr>
         <br>
-        <p>We are grateful to our collaborating Wisconsin farmers and our Soil Health Agricultural Research & Education
+        <p> For more information on the project please visit the <a href="https://www.michaelfields.org/soil-health"
+            target="_blank" rel="noopener noreferrer">Michael Fields Agricultural Institute
+          </a> website. We are grateful to our collaborating Wisconsin farmers and our Soil Health Agricultural Research
+          & Education
           (SHARE) project partners: the USDA-ARS Dairy Forage Research Center, The Nature Conservancy, UW-Madison's
+          Center for Integrated Agricultural Systems.
         </p>
 
         <!-- End Experiment -->
