--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -4,7 +4,12 @@
 {% block title %}Welcome to Wisconsin Growers Citizen Science Network {% endblock %}
 
 {% block content %}
-
+<style>
+  a p,
+  h5 {
+    color: #212529;
+  }
+</style>
 <div class="row justify-content-center">
   <div class="col-lg-8 col-md-10 col-sm-12">
     <div class="card">
@@ -20,53 +25,57 @@
         <div class="card-group">
 
 
-          <div class="card">
-            <img class="card-img-top" src="{% static 'img/display_wisc_cc_map2.png' %}"
-              alt="Map of participating farmers">
-            <div class="card-body">
-              <h5 class="card-title">Map of participating citizen science farmers. </h5>
-              <p class="card-text">Do you see your dot? <b>Click</b> each location for a popup box with cover crop
-                types, seeding rate,
-                fertility management biomass (how much plant grew), and more.</p>
-              <a href="{% url 'wisc_cc_map' %}" class="btn btn-primary">Go to the map</a>
+          <a href="{% url 'wisc_cc_map' %}">
+            <div class="card">
+              <img class="card-img-top" src="{% static 'img/display_wisc_cc_map3_smaller.jpg' %}"
+                alt="Map of participating farmers">
+              <div class="card-body">
+                <h5 class="card-title">Map of participating citizen science farmers. </h5>
+                <p class="card-text">Do you see your dot? Click each location for more information on cover cropping
+                  practices.</p>
+                <a href="{% url 'wisc_cc_map' %}" class="btn btn-primary">Go to the map</a>
+              </div>
             </div>
-          </div>
+          </a>
+          <a href="{% url 'wisc_cc_graph' %}">
+            <div class="card">
+              <img class="card-img-top" src="{% static 'img/graph_covercrop.png' %}" alt="Graph photo">
 
 
-          <div class="card">
-            <img class="card-img-top" src="{% static 'img/display_wisc_cc_graph.png' %}" alt="Graph photo">
-            <div class="card-body">
-              <h5 class="card-title">Cover Crop Graphs</h5>
-              <p class="card-text">Change variables to explore locations, species, tillage and
-                more.</p>
-              <a href="{% url 'wisc_cc_graph' %}" class="btn btn-primary">Go to graph</a>
+              <div class="card-body">
+                <h5 class="card-title">Cover crop graphs</h5>
+                <p class="card-text">Change variables to explore locations, species, tillage and
+                  more.</p>
+                <a href="{% url 'wisc_cc_graph' %}" class="btn btn-primary">Go to graph</a>
+              </div>
             </div>
-          </div>
+          </a>
 
 
         </div>
         <div class="card-group">
 
-
-          <div class="card">
-            <img class="card-img-top" src="{% static 'img/oats_berseem.jpg' %}" alt="Oats photo">
-            <div class="card-body">
-              <h5 class="card-title">Cover Crop Survey </h5>
-              <p class="card-text">Click here if you've registered to participate in this year's survey.</p>
-              <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a>
+          <a href="{% url 'wisc_cc_survey' %}">
+            <div class="card">
+              <img class="card-img-top" src="{% static 'img/oats_berseem_481x425.jpg' %}" alt="Oats photo">
+              <div class="card-body">
+                <h5 class="card-title">Cover crop survey </h5>
+                <p class="card-text">Click here if you've registered to participate in this year's survey.</p>
+                <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a>
+              </div>
             </div>
-          </div>
-
-
-          <div class="card">
-            <img class="card-img-top" src="{% static 'img/qrcode_for_further.png' %}" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Interested in participating?</h5>
-              <p class="card-text">We welcome growers with all levels of experience and types of production
-                systems. </p>
-              <a href="https://forms.gle/xPC9b78eCVKPmk6B6" class="btn btn-primary">Click here to register</a>
+          </a>
+          <a href="https://forms.gle/xPC9b78eCVKPmk6B6">
+            <div class="card">
+              <img class="card-img-top" src="{% static 'img/qrcode_for_further.png' %}" alt="">
+              <div class="card-body">
+                <h5 class="card-title">Interested in participating?</h5>
+                <p class="card-text">We welcome growers with all levels of experience and types of production
+                  systems. </p>
+                <a href="https://forms.gle/xPC9b78eCVKPmk6B6" class="btn btn-primary">Click here to register</a>
+              </div>
             </div>
-          </div>
+          </a>
 
 
         </div>
