updates to info buttons and rollovers

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -17,7 +17,7 @@
         <h3 class="card-title">Welcome</h3>
         <p>Since 2020, farmers around Wisconsin have shared cover crop and other soil health practices with us. Each
           colored dot on the map represents one of their fields. Farmers completed a survey and collected cover crop
-          samples in Fall 2020, 2021, 2022, or 2023.
+          samples in the fall of 2020, 2021, 2022, and 2023.
 
         </p>
 
