incorporatd Mrills comments from March 29.

--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -328,7 +328,11 @@
                         </div>
                         <div id="legend">
                             <svg width="260px" height="180px"></svg>
-                            <p>Actual locations have been<br>obscured to protect landowner's privacy.</p>
+                            <p>
+                                Click on map locations for more info.
+                                <br>
+                                Actual locations have been<br>obscured to protect landowner's privacy.
+                            </p>
                         </div>
 
 
