modified hover popups so that they are not tooltips and so have the original styling of the popups but open on hover

--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -538,7 +538,13 @@
                 popupContent += feature.properties.popupContent;
             }
 
-            layer.bindTooltip(popupContent);
+            layer.bindPopup(popupContent);
+            layer.on('mouseover', function (e) {
+                this.openPopup(e.latlng);
+            });
+            layer.on('mouseout', function (e) {
+                this.closePopup();
+            });
         }
 
         var geojsonMarkerOptions = {
