adding "aboveground" in biomass description in graph

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -584,7 +584,8 @@
                     <p><label style="font-size: medium;">Click</label> on colored points for a popup box with specifics
                         on county, cover crop types, and fertility management.
                     </p>
-                    <p><label style="font-size: medium;">X (horizontal) axis:</label> Cover crop biomass is a measure of
+                    <p><label style="font-size: medium;">X (horizontal) axis:</label> Cover crop aboveground biomass is
+                        a measure of
                         how well the cover crop grew before sampling. Samples are dried and then weighed, and reported
                         as “ton DM/acre” or tons of drymatter per acre.
                     </p>
