added survey admin page with two separate download buttons: one for whole survey, one just for agronomic data used in the display

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -160,9 +160,20 @@
                 Hello Administrator!
               </div>
               <div class="card-body">
+                <h5 class="card-title">Visit our survey manager page</h5>
+                <p class="card-text">Click here for survey manager page.</p>
+                <a href="{% url 'wisc_cc_manager_home' %}" class="btn btn-primary">Manager page</a>
+              </div>
+            </div>
+            <!-- <div class="card">
+
+              <div class="card-header">
+                Hello Administrator!
+              </div>
+              <div class="card-body">
                 <h5 class="card-title">Download the data!</h5>
                 <p class="card-text">To download the data click below</p>
-                <a href="{% url 'wisccc_download_data' %}" class="btn btn-primary">Download</a>
+                
               </div>
             </div>
             <div class="card">
@@ -172,7 +183,7 @@
                 <a href="{% url 'response_table' %}" class="btn btn-primary">View responses</a>
 
               </div>
-            </div>
+            </div> -->
           </div>
           {% endif %}
         </div>
