--- a/wisccc/templates/wisccc/response_table.html
+++ b/wisccc/templates/wisccc/response_table.html
@@ -22,7 +22,7 @@
       <div class="card-body">
         <h3 class="card-title">Survey Responses</h3>
         <h7 class="card-title">
-          <span><a href="{% url 'wisccc_download_data' %}">Download all data</a></span>
+          <span><a href="{% url 'wisccc_download_data' 1 %}">Download all data</a></span>
           <span style="float: right">{{ completed_surveys }} completed/{{ total_surveys }} initiated</span>
         </h7>
         <div class="col-md-12">
