--- a/wisccc/templates/wisccc/survey_review.html
+++ b/wisccc/templates/wisccc/survey_review.html
@@ -20,6 +20,8 @@
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
 
+  {% include 'wisccc/includes/form_photo.html' %}
+
   {% include 'wisccc/includes/form_farmer.html' %}
 
   {% include 'wisccc/includes/full_form.html' %}
