added photos to map!

--- a/wisccc/templates/wisccc/includes/form_farmer.html
+++ b/wisccc/templates/wisccc/includes/form_farmer.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
-
+<h4>I. Farmer Info</h4>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ farmer_form.first_name|as_crispy_field }}
