--- a/wisccc/templates/wisccc/response_table.html
+++ b/wisccc/templates/wisccc/response_table.html
@@ -16,7 +16,7 @@
   }
 </style>
 <div class="row justify-content-center">
-  <div class="col-lg-8 col-md-10 col-sm-12">
+  <div class="col-lg-12">
 
     <div class="card">
       <div class="card-body">
