--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -31,6 +31,9 @@
       <li class="nav-item" id="nav-survey">
         <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
       </li>
+      <li class="nav-item" id="nav-about">
+        <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
+      </li>
 
     </ul>
     <span class="navbar-text">
