--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -42,7 +42,7 @@
                         practical cover crop recommendations.
                         We provide participating farmers with personalized data on the
                         amount of biomass their cover crop produced as well as forage and nutrient analyses.
-                        Please explore our citizen science dashboard.
+                        Please explore our <a href="{% url 'wisc_cc_graph' %}">citizen science dashboard</a>.
                     </p>
 
 
