updated two sentences in about wording

--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -26,8 +26,8 @@
                         We see farmers as taking the lead in experimenting and
                         fine-tuning cover cropping to fit into Wisconsin's farm systems and
                         particular locations.
-                        We aim to support their creative adaptive capacity by providing them robust
-                        data and stories from other farmers around the state who make cover cropping work for them.
+                        Our aim is to support farmers' creative adaptive capacity by providing them robust data and
+                        stories from other farmers around the state who are working with cover crops.
                     </p>
                     <p>
                         Each year participating farmers provide information on their cover crop practices as well as
@@ -40,8 +40,8 @@
                         We are also aggregating this information from around the state into other cover crop data sets
                         to improve decision support tools like SnapPlus, and to guide
                         practical cover crop recommendations.
-                        We provide participating farmers with personalized data on the
-                        amount of biomass their cover crop produced as well as forage and nutrient analyses.
+                        Participating farmers receive personalized data on the amount of biomass their cover crop
+                        produced as well as forage and nutrient analyses.
                         Please explore our <a href="{% url 'wisc_cc_graph' %}">citizen science dashboard</a>.
                     </p>
 
