tweaks to wordings and desc in helptimes

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -1049,7 +1049,7 @@
                 console.log("updateHelpTipText firing!. Property: " + property)
                 var text = ""
                 if (property == "acc_gdd") {
-                    text = "Cumulative growing degree units are a measure of the growing conditions of a crop. "
+                    text = "Cumulative growing degree units measure the amount of growth-producing warmth a crop plant receives by a certain date. "
                     text += "The growing degree units accumulate from the cover crop planting date to when the biomass was collected. "
 
                 }
