big commit of a registration page; with new login and signup for registration

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -65,14 +65,14 @@
               </div>
             </div>
           </a>
-          <a href="https://forms.gle/xPC9b78eCVKPmk6B6">
+          <a href="{% url 'wisc_cc_register' %}">
             <div class="card">
               <img class="card-img-top" src="{% static 'img/qrcode_for_further.png' %}" alt="">
               <div class="card-body">
                 <h5 class="card-title">Interested in participating?</h5>
                 <p class="card-text">We welcome growers with all levels of experience and types of production
                   systems. </p>
-                <a href="https://forms.gle/xPC9b78eCVKPmk6B6" class="btn btn-primary">Click here to register</a>
+                <a href="{% url 'wisc_cc_register' %}" class="btn btn-primary">Click here to register</a>
               </div>
             </div>
           </a>
