--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -44,7 +44,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              {{ user.username }} <br> {{ user.email }}
+              {{ user.email }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
               <a class="dropdown-item" href="{% url 'my_account'  %}">My account</a>
@@ -56,8 +56,8 @@
         </ul>
         {% else %}
         <form class="form-inline ml-auto">
-          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-          <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+          <a href="{% url 'wisc_cc_login' %}" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'wisc_cc_signup' %}" class="btn btn-primary ml-2">Sign up</a>
         </form>
         {% endif %}
       </div>
