--- a/wisccc/templates/wisccc/includes/form_farmer.html
+++ b/wisccc/templates/wisccc/includes/form_farmer.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
-<h4>I. Farmer Info</h4>
+
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ farmer_form.first_name|as_crispy_field }}
@@ -12,9 +12,28 @@
     <div class="form-group col-md-8 mb-0">
         {{ farmer_form.farm_name|as_crispy_field }}
     </div>
+    <div class="form-group col-md-8 mb-0">
+        {{ farmer_form.phone_number|as_crispy_field }}
+    </div>
 </div>
 <div class="form-row">
+    <div class="form-group col-md-6 mb-0">
+        {{ farmer_form.address_street|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6 mb-0">
+        {{ farmer_form.address_municipality|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-6 mb-0">
+        {{ farmer_form.address_state|as_crispy_field }}
+    </div>
     <div class="form-group col-md-4 mb-0">
+        {{ farmer_form.address_zipcode|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6 mb-0">
         {{ farmer_form.county|as_crispy_field }}
     </div>
 </div>
