--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -67,11 +67,13 @@
           </a>
           <a href="{% url 'wisc_cc_register' %}">
             <div class="card">
-              <img class="card-img-top" src="{% static 'img/qrcode_for_further.png' %}" alt="">
+              <img class="card-img-top" src="{% static 'img/checking_corn.jpg' %}"
+                alt="Lafayette county agronomist checking corn emergence and planting depth">
               <div class="card-body">
                 <h5 class="card-title">Interested in participating?</h5>
                 <p class="card-text">We welcome growers with all levels of experience and types of production
                   systems. </p>
+                <p>You will be prompted to sign in or create an account with us to complete your registration.</p>
                 <a href="{% url 'wisc_cc_register' %}" class="btn btn-primary">Click here to register</a>
               </div>
             </div>
