--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -56,7 +56,7 @@
         </ul>
         {% else %}
         <form class="form-inline ml-auto">
-          <a href="{% url 'wisc_cc_login' %}" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
           <a href="{% url 'wisc_cc_signup' %}" class="btn btn-primary ml-2">Sign up</a>
         </form>
         {% endif %}
