--- a/wisccc/templates/wisccc/wisc_cc_login.html
+++ b/wisccc/templates/wisccc/wisc_cc_login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="row justify-content-center">
-  <div class="col-lg-4 col-md-6 col-sm-8">
+  <div class="col-lg-8 col-md-6 col-sm-8">
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Log in</h3>
@@ -17,7 +17,7 @@
         </form>
       </div>
       <div class="card-footer text-muted text-center">
-        New to our program? <a href="{% url 'signup' %}">Sign up</a>
+        New to our program? <a href="{% url 'wisc_cc_signup' %}">Sign up</a>
       </div>
     </div>
     <div class="text-center py-2">
