--- a/wisccc/templates/wisccc/wisc_cc_register.html
+++ b/wisccc/templates/wisccc/wisc_cc_register.html
@@ -15,17 +15,14 @@
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
             <div class="card-body">
-                <!-- <a class="nav-link" href="{% url 'wisc_cc_home' %}">
-                    <h3 class="card-title">Wisconsin Cover Crop Citizen Science Network</h3>
-                </a> -->
-                <h5>Register</h5>
+                <h5>Register for 2024 Cover Crop Survey</h5>
                 <p>Privacy commitment:
                     We appreciate your interest in improving cover crops and aim to protect your privacy and respect
                     your time: Any field data you provide will never be associated with any personal information.
                     We'll provide you cover crop analysis specific to your farm as well as a summary of statewide
                     findings.
                     Your participation is voluntary and you can leave the project at any time.
-                    Reach out to Dan Smith at <a href="mailto:dhsmith@wisc.edu">dhsmith@wisc.edu</a> or Mrill Ingram at
+                    Reach out to Mrill Ingram at
                     <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a> with any questions.
                     If all the above is agreeable to you, provide your contact info.
                 </p>
