--- a/wisccc/templates/wisccc/wisc_cc_register.html
+++ b/wisccc/templates/wisccc/wisc_cc_register.html
@@ -15,6 +15,7 @@
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
             <div class="card-body">
+
                 <h5>Register for 2024 Cover Crop Survey</h5>
                 <p>Privacy commitment:
                     We appreciate your interest in improving cover crops and aim to protect your privacy and respect
@@ -22,7 +23,8 @@
                     We'll provide you cover crop analysis specific to your farm as well as a summary of statewide
                     findings.
                     Your participation is voluntary and you can leave the project at any time.
-                    Reach out to Mrill Ingram at
+                    Reach out to Dan Marzu at <a href="mailto:dan.marzu@wisc.edu">dan.marzu@wisc.edu</a>
+                    or Mrill Ingram at
                     <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a> with any questions.
                     If all the above is agreeable to you, provide your contact info.
                 </p>
