--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -14,7 +14,7 @@
 
     <meta name="date" content="2022-09-01" />
 
-    <title>Wisconsin Growers Citizen Science Network</title>
+    <title>Wisconsin Cover Crop Citizen Science Network</title>
     <!-- Deleted Script -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Delete stylesheet -->
@@ -290,7 +290,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen Science Network</a>
+            <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen Science Network</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
@@ -307,7 +307,7 @@
 
         <div class="fluid-row" id="header">
 
-            <h2 class="title toc-ignore"><br>Wisconsin Growers Citizen Science Network</h2>
+            <h2 class="title toc-ignore"><br>Wisconsin Cover Crop Citizen Science Network</h2>
 
 
             <button type="button" style="border: 1px solid;" class="btn btn-secondary btn-lg" data-toggle="modal"
