--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
-{% block title %}Welcome to Wisconsin Growers Citizen Science Network {% endblock %}
+{% block title %}Wisconsin Cover Crop Citizen Science Network {% endblock %}
 
 {% block content %}
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
