--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -1,7 +1,7 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
 
-{% block title %}Welcome to Wisconsin Growers Citizen Science Network {% endblock %}
+{% block title %}Wisconsin Cover Crop Citizen Science Network{% endblock %}
 
 {% block content %}
 <style>
