locking down survey

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -61,7 +61,9 @@
               <img class="card-img-top" src="{% static 'img/oats_berseem_481x425.jpg' %}" alt="Oats photo">
               <div class="card-body">
                 <h5 class="card-title">Cover crop survey </h5>
-                <p class="card-text">Click here if you've registered to participate in this year's survey.</p>
+                <p class="card-text">Survey registration for the 2024 survey coming soon!.</p>
+                <!-- <p class="card-text">Click here if you've registered to participate in this year's survey.</p> -->
+                <!-- <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a> -->
                 <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a>
               </div>
             </div>
