added registration table; add password reset to login

--- a/wisccc/templates/wisccc/wisc_cc_signup.html
+++ b/wisccc/templates/wisccc/wisc_cc_signup.html
@@ -28,7 +28,11 @@
                     <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="warn btn btn-secondary">Back to
                             survey home
                             page</button></a>
-
+                    <div class="text-center py-2">
+                        <small>
+                            <a href="{% url 'password_reset' %}" class="text-muted">Reset password?</a>
+                        </small>
+                    </div>
 
                 </form>
 
