Added a button to get to registrant table

--- a/wisccc/templates/wisccc/wisc_cc_manager_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_manager_home.html
@@ -43,6 +43,13 @@
                         </div>
                         <div class="card">
                             <div class="card-body">
+                                <h5 class="card-title">View registrants</h5>
+                                <p class="card-text"></p>
+                                <a href="{% url 'registration_table' %}" class="btn btn-primary">View registrants</a>
+
+                            </div>
+                            <hr>
+                            <div class="card-body">
                                 <h5 class="card-title">View survey responses</h5>
                                 <p class="card-text">View and edit survey responses.</p>
                                 <a href="{% url 'response_table' %}" class="btn btn-primary">View responses</a>
